--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && webpack",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "serve": "webpack-dev-server"
   },
   "repository": "https://github.com/StephenGrider/WebpackProject",
   "author": "",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^2.26.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.0-rc.0"
+    "webpack": "2.2.0-rc.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
